Closed Bug 1278705 Opened 8 years ago Closed 8 years ago

Fix building on OS X 10.11

Categories

(WebExtensions :: Untriaged, defect)

defect
Not set
normal

Tracking

(firefox50 fixed)

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: till, Assigned: till)

References

Details

Attachments

(1 file)

Bug 1270356 broke the build at least on my OS X machine:
toolkit/xre/nsXREDirProvider.cpp:257:8: error: use of undeclared identifier 'GetOSXFolderType'; did you mean 'GetFolderTypes'?
  rv = GetOSXFolderType(kOnSystemDisk, kApplicationSupportFolderType, getter_AddRefs(localDir));

Presumably the unified build batching ends up being slightly different from the integration testing builds. In any case, adding the right header makes things work again.
Attachment #8760977 - Flags: review?(aswan)
Comment on attachment 8760977 [details] [diff] [review]
Fix building on OS X 10.11

Review of attachment 8760977 [details] [diff] [review]:
-----------------------------------------------------------------

I'm not very familiar with how the unified batching work but the change certainly looks reasonable.
Attachment #8760977 - Flags: review?(aswan) → review+
Thanks for the quick review.
Keywords: checkin-needed
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/bd4644cbfb01
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Product: Toolkit → WebExtensions
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: