Bug 1278705 - Fix building on OS X 10.11. r=aswan